[project]
name = "headlizup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gabliz", email = "lizzosgabriele@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "shellingham>=1.5.4",
    "typer[all]>=0.24.1",
]

[project.scripts]
headlizup = "headlizup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["headlizup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
